[tool.poetry]
name = "tarix"
version = "0.1.1"
description = ""
authors = ["Yaghoub Ghadri <y.ghaderi@outlook.com>"]
readme = "README.md"
repository = "https://github.com/yghaderi/tarix"

[tool.coverage.run]
source = ["tarix"]
branch = true

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"
jdatetime = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
